# otus-cpp_2

./: CMakeLists.txt  ip_filter.cpp  main.cpp  test_version.cpp
.github/workflows/: release.yml
